<resources>
    <string name="app_name">ShopOnline</string>
    <string name="entry">Вход</string>
    <string name="first_name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="phone_number">Номер телефона</string>
    <string name="enter">Войти</string>
    <string name="loyalty_program_string_1">Нажимая кнопку “Войти”, Вы принимаете</string>
    <string name="loyalty_program_string_2"><u>условия программы лояльности</u></string>
    <string name="main">Главная</string>
    <string name="catalog">Каталог</string>
    <string name="basket">Корзина</string>
    <string name="discounts">Акции</string>
    <string name="profile">Профиль</string>
    <string name="favourites">Избранное</string>
    <string name="phone_number_mask">+7 (***) ***-**-**</string>
    <string name="phone_number_prefix">+7 (</string>
    <string name="phone_number_mask_short">***) ***-**-**</string>
    <string name="by_popularity">По популярности</string>
    <string name="reducing_prices">По уменьшению цены</string>
    <string name="ascending_prices">По возрастанию цены</string>
    <string name="filters">Фильтры</string>
    <string name="watch_all">Смотреть всё</string>
    <string name="face">Лицо</string>
    <string name="body">Тело</string>
    <string name="suntan">Загар</string>
    <string name="mask">Маски</string>
    <string-array name="sorting_types">
        <item>По популярности</item>
        <item>По уменьшению цены</item>
        <item>По возрастанию цены</item>
    </string-array>
    <string name="description_title">Описание</string>
    <string name="hide">Скрыть</string>
    <string name="detail">Подробнее</string>
    <string name="characteristics_title">Характеристики</string>
    <string name="consist_title">Состав</string>
    <string name="add_to_basket">Добавить в корзину</string>
    <string name="available">Доступно для заказа</string>
    <string name="piece_1">штука</string>
    <string name="piece_2">штук</string>
    <string name="piece_3">штуки</string>
    <string name="feedback_1">отзыв</string>
    <string name="feedback_2">отзыва</string>
    <string name="feedback_3">отзывов</string>
    <string name="personal_account">Личный кабинет</string>
    <string name="shops">Магазины</string>
    <string name="feedback">Обратная связь</string>
    <string name="offer">Оферта</string>
    <string name="product_return">Возврат товара</string>
    <string name="product_1">товар</string>
    <string name="product_2">товара</string>
    <string name="product_3">товаров</string>
    <string name="exit">Выйти</string>
    <string name="products">Товары</string>
    <string name="brands">Бренды</string>
</resources>