<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.catalog.CatalogFragment">

    <TextView
        android:id="@+id/catalog_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:text="@string/catalog"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sorting"
        style="@style/SpinnerTheme"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/sorting_types"
        android:paddingHorizontal="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/catalog_fragment_title"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="16dp"
        android:background="@color/transparent"
        android:drawableStart="@drawable/filters"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/filters"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/catalog_fragment_title"
        tools:ignore="TouchTargetSizeCheck" />

    <HorizontalScrollView
        android:id="@+id/chip_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sorting">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/catalog_filter_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="6dp"
            app:selectionRequired="false"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_watch_all"
                style="@style/CatalogChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch_all" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_face"
                style="@style/CatalogChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/face" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_body"
                style="@style/CatalogChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_suntan"
                style="@style/CatalogChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suntan" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mask"
                style="@style/CatalogChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mask" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/catalog_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_scroll_view"
        app:spanCount="2"
        tools:listitem="@layout/catalog_item" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/pink"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/catalog_fragment_title" />

</androidx.constraintlayout.widget.ConstraintLayout>