<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.favourites.FavouritesFragment">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/favourites_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_medium"
        android:layout_marginStart="28dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="1dp"
        android:text="@string/favourites"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/favourites_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        app:chipSpacingHorizontal="1dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/favourites_chip_group_background"
        app:checkedChip="@id/chip_products"
        android:layout_marginHorizontal="16dp"
        app:selectionRequired="true"
        android:padding="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_products"
            style="@style/FavouritesChipStyle"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:text="@string/products"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_brands"
            style="@style/FavouritesChipStyle"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:text="@string/brands"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favourites_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="14dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favourites_chip_group"
        app:spanCount="2"
        tools:listitem="@layout/catalog_item" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/pink"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button" />

</androidx.constraintlayout.widget.ConstraintLayout>